cabal-version:       3.4

name:                monus-weighted-search
version:             0.1.0.0
synopsis:            Search weighted by an ordered monoid with monus
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
build-type:          Simple

library
  exposed-modules:     Data.Monus
                     , Data.Monus.Prob
                     , Data.Monus.Dist
                     , Control.Monad.Heap.List
                     , Control.Monad.Heap
                     , MonusWeightedSearch.Internal.CoerceOperators
                     , MonusWeightedSearch.Internal.TestHelpers
                     , MonusWeightedSearch.Internal.Heap
                     , MonusWeightedSearch.Dijkstra
                     , MonusWeightedSearch.Sampling
                     , MonusWeightedSearch.SubsetSum
                     , Data.WeightedGraph
                     , Data.WeightedGraph.AdjList
                     , Control.Monad.Star
  build-depends:       base >=4.13 && <5
                     , containers >=0.6.4 && <0.6.5
                     , QuickCheck >=2.14 && <2.15
                     , deepseq >= 1.4
                     , transformers >= 0.5
                     , mtl >= 2.2
                     , random >= 1.0
                     , array >= 0.5
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , DerivingStrategies
                     , GeneralisedNewtypeDeriving
                     , GADTs
                     , DataKinds
                     , RankNTypes
                     , PolyKinds
                     , KindSignatures
                     , TypeOperators
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , FlexibleInstances
                     , FlexibleContexts
                     , DerivingVia
                     , LambdaCase
                     , PatternSynonyms
                     , ViewPatterns
                     , StandaloneDeriving
                     , TypeFamilies
                     , TypeApplications
                     , ScopedTypeVariables
                     , TupleSections
                     , ApplicativeDo
                     , InstanceSigs
                     , BlockArguments
                     , QuantifiedConstraints
                     , BangPatterns
  ghc-options: -Wall
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wredundant-constraints
               -Widentities
               -Wpartial-fields
               -Wno-unticked-promoted-constructors
               -Wno-name-shadowing
               -Wno-unused-matches
               -O2

test-suite monus-weighted-search-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck >= 2.14
    , monus-weighted-search
    , base >= 4.13
    , tasty-quickcheck >= 0.10
    , tasty >= 1.4
    , array >= 0.5
  if impl(ghc >= 8.0)
    ghc-options: -fwarn-redundant-constraints -Wcompat
  default-language: Haskell2010
