cabal-version:       3.4

name:                monus-weighted-search
version:             0.1.0.0
synopsis:            Search weighted by an ordered monoid with monus
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Data.Monus
                     , Data.Monus.Prob
                     , Data.Monus.Dist
                     , Control.Monad.Heap.List
                     , Control.Monad.Heap
                     , MonusWeightedSearch.Internal.CoerceOperators
                     , MonusWeightedSearch.Internal.TestHelpers
                     , MonusWeightedSearch.Internal.Heap
                     , MonusWeightedSearch.Dijkstra
                     , MonusWeightedSearch.Sampling
                     , MonusWeightedSearch.SubsetSum
                     , MonusWeightedSearch.Sort
                     , MonusWeightedSearch.Viterbi
                     , MonusWeightedSearch.Parsing
                     , MonusWeightedSearch.WeightedGraph
                     , MonusWeightedSearch.Internal.AdjList
  build-depends:       base >=4.13 && <5
                     , containers >=0.6.4 && <0.6.5
                     , QuickCheck >=2.14 && <2.15
                     , deepseq >= 1.4
                     , transformers >= 0.5
                     , mtl >= 2.2
                     , random >= 1.0
                     , array >= 0.5
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , DerivingStrategies
                     , GeneralisedNewtypeDeriving
                     , GADTs
                     , DataKinds
                     , RankNTypes
                     , PolyKinds
                     , KindSignatures
                     , TypeOperators
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , FlexibleInstances
                     , FlexibleContexts
                     , DerivingVia
                     , LambdaCase
                     , PatternSynonyms
                     , ViewPatterns
                     , StandaloneDeriving
                     , TypeFamilies
                     , TypeApplications
                     , ScopedTypeVariables
                     , TupleSections
                     , ApplicativeDo
                     , InstanceSigs
                     , BlockArguments
                     , QuantifiedConstraints
                     , BangPatterns
  ghc-options: -Wall
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wredundant-constraints
               -Widentities
               -Wpartial-fields
               -Wno-unticked-promoted-constructors
               -Wno-name-shadowing
               -Wno-unused-matches
               -O2

test-suite monus-weighted-search-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck >= 2.14
    , monus-weighted-search
    , base >= 4.13
    , tasty-quickcheck >= 0.10
    , tasty >= 1.4
    , array >= 0.5
    , mtl >= 2.2
  if impl(ghc >= 8.0)
    ghc-options: -fwarn-redundant-constraints -Wcompat
  default-language: Haskell2010

-- test-suite doctests
--   type: exitcode-stdio-1.0
--   main-is: doctests.hs
--   hs-source-dirs:
--       doctest
--   ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -threaded
--   build-depends:
--       QuickCheck >= 2.14
--     , doctest >= 0.18.1
--     , base >= 4.13
--     , monus-weighted-search
--   if impl(ghc >= 8.0)
--     ghc-options: -fwarn-redundant-constraints -Wcompat
--   other-modules:
--       Paths_monus_weighted_search
--   default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: bench.hs
  hs-source-dirs:
      bench
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base >=4.7 && <5
    , monus-weighted-search
    , containers
    , criterion
    , deepseq
    , random
  default-language: Haskell2010
